fixed for lab 3

--- a/lab_3/Dockerfile-original
+++ b/lab_3/Dockerfile-original
@@ -10,10 +10,9 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/* && \
     # Ensure Spark’s scripts run with bash instead of dash
     ln -sf /bin/bash /bin/sh && \
-    # Create expected JAVA_HOME directory and symlink the java binary there (only if missing)
+    # Create expected JAVA_HOME directory and symlink the java binary there
     mkdir -p /usr/lib/jvm/java-17-openjdk-amd64/bin && \
-    [ -f /usr/lib/jvm/java-17-openjdk-amd64/bin/java ] || ln -s "$(which java)" /usr/lib/jvm/java-17-openjdk-amd64/bin/java
-    
+    ln -s "$(which java)" /usr/lib/jvm/java-17-openjdk-amd64/bin/java
 
 # Set JAVA_HOME to the directory expected by Spark
 ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
